# timeflux_brainflow

./: README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
examples/: brainbit.yaml  cyton.yaml  freeeeg32.yaml  ganglion.yaml  synthetic.yaml
test/: test_arithmetic.py  test_brainflow.py
timeflux_brainflow/nodes/: driver.py
timeflux_example/nodes/: arithmetic.py  dynamic.py  sinus.py
